--- a/style.css
+++ b/style.css
@@ -264,12 +264,24 @@ section {
     background: url(images/bg3.jpg);
     background-size: cover;
 }
+.contact .content {
+    display: flex;
+}
 .contactForm {
     padding: 75px 50px;
     background: #fff;
     box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
+    width: 50%;
     margin-top: 50px;
+}
+.googleMap {
+    padding: 75px 50px;
+    width: 50%;
+    margin-top: 50px;
+    margin-left: 100px;
+}
+.googleMap iframe {
+    height: 600px;
 }
 .contactForm h3 {
     color: #111;
