--- a/style.css
+++ b/style.css
@@ -275,8 +275,8 @@ section {
     margin-top: 50px;
 }
 .googleMap {
-    padding: 75px 50px;
-    width: 50%;
+    padding: 75px;
+    width: 40%;
     margin-top: 50px;
     margin-left: 100px;
 }
