--- a/style.css
+++ b/style.css
@@ -271,17 +271,22 @@ section {
     padding: 75px 50px;
     background: #fff;
     box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
-    width: 50%;
+    width: 48%;
     margin-top: 50px;
 }
 .googleMap {
-    padding: 75px;
-    width: 40%;
+    padding: 75px 50px;
+    background: #fff;
+    box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
+    width: 48%;
     margin-top: 50px;
-    margin-left: 100px;
+    margin-left: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .googleMap iframe {
-    height: 600px;
+    width: 100%;
 }
 .contactForm h3 {
     color: #111;
